# resource-monitor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  cli.rs  main.rs  ui.rs
